--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
   "dependencies": {
     "@google/genai": "^0.1.1",
     "firebase": "^10.12.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "recharts": "^2.12.7",
-    "lucide-react": "^0.378.0"
+    "lucide-react": "^0.378.0",
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "firebase-tools": "^13.10.0",
