firebase to Ai studio

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "deploy": "firebase deploy"
   },
   "dependencies": {
-    "@google/genai": "^0.1.1",
+    "@google/genai": "^0.12.0",
     "firebase": "^10.12.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -19,6 +19,7 @@
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.2.1",
     "firebase-tools": "^13.10.0",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
